--- a/src/screen/chat.css
+++ b/src/screen/chat.css
@@ -47,16 +47,31 @@
     padding: 10px;
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 8px;
     color: white;
     cursor: pointer;
 }
 
+.avatar {
+    display: inline-flex; 
+    width: 50px;
+    height: 50px;
+    border-radius: 50%; 
+    border: 2px solid aquamarine;
+    box-sizing: border-box; 
+}
+
+.avatar-text{
+    font-size: 18px;
+    font-weight: bold;
+}
 .imgChat {
     width: 50px;
     height: 50px;
+    border-radius: 1;
     border-radius: 50%;
     object-fit: cover;
+    border-color: white;
 }
 
 .search {
@@ -99,7 +114,8 @@ p {
 
 .chatIcons {
     display: flex;
-    gap: 10px;
+    gap: 20px;
+
 }
 
 /* img {
@@ -134,12 +150,15 @@ input {
 .send {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 8px;
 }
 
 .icon {
+    display: flex;
+    justify-self: center;
     height: 24px;
     cursor: pointer;
+    margin-top: 10px;
 }
 
 button {
@@ -153,7 +172,7 @@ button {
 .messageSend {
     display: block;
     gap: 20px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     /* justify-content: space-between; */
 }
 
@@ -173,11 +192,9 @@ button {
 }
 
 .messageContent {
-    max-width: 80%;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 10px;
-
 }
 
 p {
@@ -186,10 +203,13 @@ p {
     max-width: max-content;
 }
 
-.imgCont {
-    width: 50%;
-}
 
 .para {
     border-radius: 10px 0px 10px 10px;
+}
+
+.message-time{
+    font-size: 10px;
+    align-self: flex-end;
+    margin-left: 12px;
 }
