all app message

--- a/src/components/ussd.css
+++ b/src/components/ussd.css
@@ -233,5 +233,5 @@
 .sms-style .sms-title{
   font-size: 12px;
   font-weight: bold;
-  color:#0E7BE3 !important;
+  /* color:#0E7BE3 !important; */
 }
